# dredge

./: .gitignore  AGENTS.md  Makefile  README.md  download_prow_job.py  pyproject.toml
.claude-plugin/: marketplace.json
docs/: refactor.md
plugins/dredge/.claude-plugin/: plugin.json
plugins/dredge/skills/prow-artifacts/: SKILL.md
plugins/dredge/skills/prow-artifacts/references/: gather-must-gather.md
plugins/prow-job-download/.claude-plugin/: plugin.json
plugins/prow-job-download/skills/prow-job-download/: SKILL.md
src/ci_tools/: __main__.py  artifacts.py  auth.py  cli.py  github.py  http.py  prow.py
src/dredge/: __main__.py  artifacts.py  auth.py  cli.py  commands.py  discovery.py  github.py  http.py  prow.py
src/dredge/discovery/: __init__.py  _github.py  _prow_history.py  _types.py
src/dredge/fetch_url/: __init__.py  _session.py
src/dredge/fetcher/: __init__.py  _auth.py  _session.py
src/dredge/import_job/: __init__.py  _metadata.py
src/dredge/junit/: __init__.py  _filter.py
src/dredge/prow/: __init__.py  _gcsweb.py  _metadata.py  _step.py  _types.py
src/dredge/step/: __init__.py  _gcsweb.py  _step.py
tests/: conftest.py  test_cli.py  test_commands.py  test_discovery.py  test_fetch_url.py  test_import_job.py  test_job.py  test_junit_filter.py  test_step.py
tests/fixtures/: gcsweb_dir.html  github_commit_status.json  github_pr.json  junit_operator.xml  oauth_403.html  oauth_authorize.html  prow_history_page1.html  prow_history_page2.html  prowjob.json  spyglass_page.html  step_graph.json
