[project]
name = "dredge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests"]

[project.optional-dependencies]
kerberos = ["gssapi"]

[dependency-groups]
dev = ["pytest", "responses", "ruff", "mypy", "types-requests"]

[project.scripts]
dredge = "dredge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["dredge"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "gssapi.*"
ignore_missing_imports = true
